# gobabygo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CROSS_VERIFICATION_BRIEF.md  HANDOFF.md  QUICKSTART.md  README.md  pyproject.toml
.planning/: INCIDENT-2026-03-04-SCHEDULER-CONCURRENCY.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESUME.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
deploy/: BOOT-ORDER.md  DOCKER-MIGRATION.md  MAC-112-ITERM2-CLI-SETUP.md  SESSION-FIRST-E2E-RUNBOOK.md  check-mac-112-cli.sh  compose.env.example  compose.yml  deploy-router.sh  deploy-workers.sh  install.sh  live-compose.sh  mesh-matrix-bridge.docker.env  mesh-matrix-bridge.env  mesh-matrix-bridge.service  mesh-review-codex.env  mesh-review-worker@.service  mesh-router.env  mesh-router.service  mesh-session-claude-work.env  mesh-session-codex-review.env  mesh-session-codex-work.env  mesh-session-gemini-work.env  mesh-session-worker@.service  mesh-session.common.env  mesh-worker-claude-work.env  mesh-worker-codex-work.env  mesh-worker-gemini-work.env  mesh-worker.batch.common.env  mesh-worker.common.env  mesh-worker@.service  router.Dockerfile  smoke-docker.sh  topology.v1.4.example.yml  ufw-setup.sh  verify-network.sh
kiss_mesh/: CHANGELOG_RUNTIME_REALIGNMENT.md  CONSOLIDATED_TEAM_ORCHESTRATION_GUIDE.md  HANDOFF_2026-02-25_SESSION_FIRST_E2E.md  KISS_IMPLEMENTATION_SPEC_V1.md  README.md
mapping/: account_pools.yaml  command_overrides.yaml  command_rules.yaml  operator_ui.yaml  pipeline_templates.yaml  provider_runtime.yaml
schemas/: command_event.schema.json
scripts/: mesh  ws  (+9 more)
(+198 files in other folders)
